--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <!-- animation -->
+    <link rel="stylesheet" href="assets/css/animate.css">
     <!-- css file link -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- popup css link -->
@@ -27,32 +29,33 @@
     <!-- header section -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/images/Logo.png" alt="image"></a>
+            <a class="navbar-brand wow fadeInDown" data-wow-delay=".2s" href="#"><img src="assets/images/Logo.png"
+                    alt="image"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay=".4s">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay=".6s">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay=".7s">
                         <a class="nav-link" href="#">Service</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay=".8s">
                         <a class="nav-link" href="#">Service</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay=".9s">
                         <a class="nav-link" href="#">Blog</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item wow fadeInDown" data-wow-delay="1s">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
-                    <a href="" class="navbar_btn">
+                    <a href="" class="navbar_btn wow fadeInDown" data-wow-delay="1.2s">
                         <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="15.5" cy="15.5" r="14.5" stroke="white" stroke-width="2" />
                             <g clip-path="url(#clip0_15_303)">
@@ -82,7 +85,7 @@
                     <div class="col-md-10 offset-md-1">
                         <div class="row">
                             <div class="main_title col-md-12">
-                                <h1 class="title_text">Vear <span class="text_background">Andesron</span> , <br>
+                                <h1 class="title_text wow fadeInUp">Vear <span class="text_background">Andesron</span> , <br>
                                     New York-Based Frontend Developer</h1>
                             </div>
                         </div>
@@ -95,7 +98,7 @@
                                                 <div class="title_content">
                                                     <div class="line">
                                                     </div>
-                                                    <div>
+                                                    <div class=" wow fadeInDown">
                                                         <p>Duis aute irure dolor in reprehenderit in voluptate velit
                                                             esse cillum dolore eu fugiat nulla pariatur excepteur sint
                                                             lorem ipsum Lorem ipsum dolor sit amet, consectetur
@@ -150,7 +153,7 @@
                                         </div>
                                         <div class="title_btn col-md-6">
                                             <a href="">
-                                                <div class="title_bottom_right">
+                                                <div class="title_bottom_right wow flip" data-wow-delay=".5s">
                                                     <div>
                                                         <p>Lets Talk</p>
                                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
@@ -181,7 +184,7 @@
         <!-- end banner section -->
 
         <!-- tab section -->
-        <section class="tab_section" id="tab">
+        <section class="tab_section wow fadeInUp" data-wow-delay=".2s" id="tab">
             <div class="container">
                 <div class="row">
                     <!-- to do ai section ta korbo akhon -->
@@ -341,10 +344,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 offset-md-5">
-                        <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        <h5 class="wow fadeInDown">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur excepteur sint lorem ipsumDonec imperdiet risus at tortor consequat maximus et eget
                             magna. Cras ornare sagittis augue</h5>
-                        <h5>Sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla
+                        <h5 class="wow fadeInUp">Sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla
                             vel eros. Donec euismod leo lectus, et euismod metus euismod sed. Quisque quis suscipit
                             ipsum, at pellentesque velit. Duis a congue sem.</h5>
                         <img src="assets/images/signature.png" alt="image">
@@ -359,7 +362,7 @@
             <div class="container">
                 <div class="galary-section-waper">
                     <div class="row">
-                        <div class="img1 col-md-6">
+                        <div class="img1 col-md-6 wow fadeInLeft" data-wow-delay=".2s">
                             <img src="assets/images/image4.png" alt="image">
                             <div class="overlay">
                                 <a class="view" href="assets/images/image4.png">
@@ -372,7 +375,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="img2 col-md-6">
+                        <div class="img2 col-md-6 wow fadeInRight" data-wow-delay=".2s">
                             <img src="assets/images/image (1).png" alt="image">
                             <div class="overlay">
                                 <a class="view" href="assets/images/image (1).png">
@@ -387,7 +390,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="img3 col-md-6">
+                        <div class="img3 col-md-6 wow fadeInLeft" data-wow-delay=".4s">
                             <img src="assets/images/image (2).png" alt="image">
                             <div class="overlay">
                                 <a class="view" href="assets/images/image (2).png">
@@ -400,7 +403,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="img4 col-md-6">
+                        <div class="img4 col-md-6 wow fadeInRight" data-wow-delay=".4s">
                             <img src="assets/images/image (3).png" alt="image">
                             <div class="overlay">
                                 <a class="view" href="assets/images/image (3).png">
@@ -425,7 +428,7 @@
             <div class="container">
                 <div class="progres-section-waper">
                     <div class="row align-items-center">
-                        <div class="col-md-4">
+                        <div class="col-md-4 wow fadeInLeft">
                             <div class="row">
                                 <div class="col-6">
                                     <div class="circlechart" data-percentage="90">
@@ -513,7 +516,7 @@
                             </div>
                         </div>
                         <div class="col-md-7 offset-md-1">
-                            <div class="progres-content">
+                            <div class="progres-content wow fadeInUp" data-wow-delay=".2s">
                                 <div class="progres-line"></div>
                                 <div class="progres-main-content">
                                     <h6>2022 - Present</h6>
@@ -528,7 +531,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="progres-content">
+                            <div class="progres-content wow fadeInUp" data-wow-delay=".4s">
                                 <div class="progres-line"></div>
                                 <div class="progres-main-content">
                                     <h6>2022 - Present</h6>
@@ -543,7 +546,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="progres-content">
+                            <div class="progres-content wow fadeInUp" data-wow-delay=".6s">
                                 <div class="progres-line"></div>
                                 <div class="progres-main-content">
                                     <h6>2022 - Present</h6>
@@ -557,7 +560,6 @@
                                             enim hendrer.</p>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -570,7 +572,7 @@
         <section class="awards-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4 wow fadeInLeft">
                         <div class="row">
                             <div class="col-6">
                                 <div class="left_awards_content">
@@ -603,7 +605,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-7 offset-md-1">
+                    <div class="col-md-7 offset-md-1 wow fadeInRight">
                         <div class="right_awards_content">
                             <h5 class="awards_content">
                                 <svg width="22" height="16" viewBox="0 0 22 16" fill="none"
@@ -664,25 +666,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="left_content_section">
+                        <div class="left_content_section wow fadeIn" data-wow-delay=".2s">
                             <h5>Creative Designs & Digital Solutions</h5>
                             <p>May 25,2022</p>
                         </div>
-                        <div class="left_content_section">
+                        <div class="left_content_section wow fadeIn" data-wow-delay=".4s">
                             <h5>Creative Designs & Digital Solutions</h5>
                             <p>May 25,2022</p>
                         </div>
-                        <div class="left_content_section">
+                        <div class="left_content_section wow fadeIn" data-wow-delay=".6s">
                             <h5>Creative Designs & Digital Solutions</h5>
                             <p>May 25,2022</p>
                         </div>
-                        <div class="left_content_section">
+                        <div class="left_content_section wow fadeIn" data-wow-delay=".8s">
                             <h5>Creative Designs & Digital Solutions</h5>
                             <p>May 25,2022</p>
                         </div>
                     </div>
                     <div class="col-md-8 offset-md-1">
-                        <div class="right_content_section">
+                        <div class="right_content_section wow fadeIn" data-wow-delay=".2s">
                             <p>In sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
                                 tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer. In
                                 sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
@@ -690,7 +692,7 @@
                             </p>
                             <a href="">Read more</a>
                         </div>
-                        <div class="right_content_section">
+                        <div class="right_content_section wow fadeIn" data-wow-delay=".4s">
                             <p>In sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
                                 tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer. In
                                 sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
@@ -698,7 +700,7 @@
                             </p>
                             <a href="">Read more</a>
                         </div>
-                        <div class="right_content_section">
+                        <div class="right_content_section wow fadeIn" data-wow-delay=".6s">
                             <p>In sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
                                 tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer. In
                                 sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
@@ -706,7 +708,7 @@
                             </p>
                             <a href="">Read more</a>
                         </div>
-                        <div class="right_content_section">
+                        <div class="right_content_section wow fadeIn" data-wow-delay=".8s">
                             <p>In sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
                                 tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer. In
                                 sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus
@@ -735,9 +737,9 @@
                 <button class="btn">Submit</button>
             </form>
             <div class="footer-content">
-                <h2>Would Like to Hear From You!</h2>
-                <h5>anderson@gmail.com</h5>
-                <div class="footer-icon">
+                <h2 class="wow fadeInUp" data-wow-delay=".2s">Would Like to Hear From You!</h2>
+                <h5 class="wow fadeInUp" data-wow-delay=".4s">anderson@gmail.com</h5>
+                <div class="footer-icon wow fadeInUp" data-wow-delay=".6s">
                     <svg width="38" height="31" viewBox="0 0 38 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M37.9361 4.13018C36.561 4.73951 35.0837 5.15122 33.5308 5.33731C35.1332 4.37851 36.332 2.86948 36.9035 1.09178C35.398 1.98599 33.7504 2.61542 32.0322 2.9527C30.8767 1.719 29.3463 0.901283 27.6785 0.626505C26.0107 0.351728 24.2988 0.635262 22.8087 1.43309C21.3185 2.23091 20.1334 3.4984 19.4374 5.03875C18.7415 6.5791 18.5735 8.30614 18.9596 9.95173C15.9092 9.79857 12.925 9.00571 10.2008 7.6246C7.47662 6.2435 5.07326 4.30501 3.14673 1.93496C2.488 3.07127 2.10923 4.38874 2.10923 5.79184C2.10849 7.05495 2.41954 8.29871 3.01479 9.41278C3.61003 10.5268 4.47105 11.4768 5.52146 12.1783C4.30326 12.1395 3.11194 11.8103 2.04665 11.2181V11.317C2.04653 13.0885 2.65932 14.8056 3.78106 16.1768C4.9028 17.5479 6.46439 18.4888 8.20086 18.8397C7.07078 19.1455 5.88597 19.1906 4.73593 18.9714C5.22585 20.4958 6.18019 21.8287 7.46533 22.7837C8.75047 23.7387 10.3021 24.2679 11.9029 24.2973C9.18539 26.4306 5.82924 27.5878 2.37437 27.5827C1.76237 27.5829 1.1509 27.5471 0.543091 27.4757C4.04998 29.7305 8.13225 30.9271 12.3015 30.9225C26.4148 30.9225 34.1302 19.2333 34.1302 9.09538C34.1302 8.76602 34.122 8.43335 34.1072 8.10399C35.6079 7.01868 36.9033 5.67474 37.9328 4.13512L37.9361 4.13018Z"
@@ -768,6 +770,7 @@
     <script src="assets/js/magnific-popup.jquery.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdn.rawgit.com/bfintal/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
